<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Get It Done!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="add_item">Add a new item...</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_to_do_item">Item To Get Done!</string>
    <string name="action_filter">Filter Items</string>
    <string name="action_refresh">Refresh Items</string>
    <string name="action_add">Add Item</string>
    <string name="action_sort">Sort Items</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete Item</string>
    <string name="action_save">Save Item</string>
    <string name="filter_date_range">Filter Date Range</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="ok">OK</string>

</resources>
